* fix disconnection detection while in ControlPad / ColorPicker